--- a/MyBookWeb/appsettings.json
+++ b/MyBookWeb/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings":
+  {
+    "DefaultConnection": "server=localhost;port=3306;userid=root;password=password;database=Categorydb"
+  }
 }
-
